        ====== plasma release 0.8.25 (v0_8_25) on Linux (cde-tx32-ldt189) ======

2006-03-17  Brian Kahne  <bkahne@freescale.com>

	* Various minor changes to port Plasma to gcc 4.1.

	* The garbage collector was upgraded to version 6.7.

        ====== plasma release 0.8.24 (v0_8_24) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.24 (v0_8_24) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.24 (v0_8_24) on Linux (cde-tx32-ldt189) ======

2006-03-07  Brian Kahne  <bkahne@freescale.com>

	* Fixed bugs in TypeInfo:

	  * Added ability to get encoding string.

	  * Fixed the nth-template-argument accessor function.

	* Fixed nested functions so that they work (I think).  This
	feature is now turned on by default.

2006-02-08  Brian Kahne  <bkahne@freescale.com>

	* Removed trailing whitespace from shbang lines to avoid an
	issue with running them under Cygwin.

        ====== plasma release 0.8.23 (v0_8_23) on Linux (cde-tx32-ldt189) ======

2006-01-05  Brian Kahne  <bkahne@freescale.com>

	* Fixed a bug with parsing long strings: We didn't handle the case
	where we received a null character, indicating that we had a badly
	formed string (had run to the end of the buffer w/o finding the
	terminator).  This meant that we ended up in an infinite loop.
	Fixed this and added tests/parsing/in7.C to verify this.

        ====== plasma release 0.8.22 (v0_8_22) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.22 (v0_8_22) on Linux (cde-tx32-ldt189) ======

2005-11-09  Brian Kahne  <bkahne@freescale.com>

	* Removed references to Somerset and FIL from documentation.

	* Modified the documentation and configure/Makefile stuff so that
	we print an URL location that's specified using a command-line
	option (--web-url).

        ====== plasma release 0.8.21 (v0_8_21) on Linux (cde-tx32-ldt189) ======

2005-11-02  Brian Kahne  <bkahne@freescale.com>

	* Added copy-right notices to all C++/Plasma files.  Created a