@@ -9,6 +9,7 @@
 //
 #include <assert.h>
 #include <stdio.h>
+#include <math.h>
 #include <plasma.h>
 
 typedef plasma::Channel<int>    IntChan;
@@ -17,13 +18,23 @@ typedef plasma::Channel<double> FloatChan;
 typedef std::vector<IntChan> IntChanVect;
 typedef std::vector<FloatChan> FloatChanVect;
 
+const int Count = 100000;
+
+void mydelay()
+{
+  double j = 0;
+  for (int i = 0; i != Count; ++i) {
+    double k = 400000000;
+    double l = 500000000;
+    j += pow(k * l,5);
+  }
+}
+
 int iproducer(int val,IntChan &chan) 
 {
   for (int i = 0; i != 10; ++i) {
     chan.write(val+i);
-    for (int j = 0; j != 100000; ++j) {
-      int x = x + 1;
-    }
+    mydelay();
   }
   chan.write(-1);
   plasma::mprintf ("Producer done.\n");
@@ -34,9 +45,7 @@ int fproducer(double val,FloatChan &chan)
 {
   for (int i = 0; i != 10; ++i) {
     chan.write(val+i);
-    for (int j = 0; j != 100000; ++j) {
-      int x = x + 1;
-    }
+    mydelay();
   }
   chan.write(-1);
   plasma::mprintf ("Producer done.\n");
