@@ -10,9 +10,22 @@
 
 #include <assert.h>
 #include <stdio.h>
+#include <math.h>
 #include <plasma.h>
 
 typedef plasma::Channel<int> IntChan;
+
+const int Count = 1000000;
+
+void mydelay()
+{
+  double j = 0;
+  for (int i = 0; i != Count; ++i) {
+    double k = 400000000;
+    double l = 500000000;
+    j += pow(k * l,5);
+  }
+}
 
 void producer(int val,IntChan &chan) 
 {
@@ -33,9 +46,7 @@ void consumer(IntChan &c0)
         if (v < 0) ++donecount;
       }
       {
-        for (int j = 0; j != 1000000; ++j) {
-          int x = 1;
-        }
+        mydelay();
         plasma::mprintf ("No value present.\n");
       }
     }
