@@ -9,10 +9,13 @@
 //
 
 #include <stdio.h>
+#include <math.h>
 
 #include "plasma.h"
 
-const int Count = 100000000;
+const int Count = 1000000;
+
+void mydelay();
 
 int pMain(int argc,const char *argv[])
 {
@@ -20,10 +23,7 @@ int pMain(int argc,const char *argv[])
     par {
       {
         for (int i = 0; i != 10; ++i) {
-          int j = 0;
-          for (int i = 0; i != Count; ++i) {
-            j += 1;
-          }
+          mydelay();
           plasma::mprintf ("In block 1.\n");
         }
         result1 = 69;
@@ -31,10 +31,7 @@ int pMain(int argc,const char *argv[])
       }
       {
         for (int j = 0; j != 10; ++j) {
-          int j = 0;
-          for (int i = 0; i != Count; ++i) {
-            j += 1;
-          }
+          mydelay();
           plasma::mprintf("In block 2.\n");
         }
         result2 = 200;
@@ -49,4 +46,14 @@ int pMain(int argc,const char *argv[])
     plasma::mprintf ("Result1:  %d,  Result2:  %d,  Result3:  %d\n",result1,result2,result3);
   }
   return 0;
+}
+
+void mydelay()
+{
+  double j = 0;
+  for (int i = 0; i != Count; ++i) {
+    double k = 400000000;
+    double l = 500000000;
+    j += pow(k * l,5);
+  }
 }
