@@ -9,10 +9,23 @@
 // the new statements outside of the class.
 //
 #include <stdio.h>
+#include <math.h>
 
 #include "plasma.h"
 
 using namespace plasma;
+
+const int Count = 1000000;
+
+void mydelay()
+{
+  double j = 0;
+  for (int i = 0; i != Count; ++i) {
+    double k = 400000000;
+    double l = 500000000;
+    j += pow(k * l,5);
+  }
+}
 
 struct Foo {
   void operator()()
@@ -21,10 +34,7 @@ struct Foo {
     par {
       {
         for (int i = 0; i != 10; ++i) {
-          int j = 0;
-          for (int i = 0; i != 100000000; ++i) {
-            j += 1;
-          }
+          mydelay();
           plasma::mprintf ("In block 1.\n");
         }
         result1 = 69;
@@ -32,10 +42,7 @@ struct Foo {
       }
       {
         for (int j = 0; j != 10; ++j) {
-          int j = 0;
-          for (int i = 0; i != 100000000; ++i) {
-            j += 1;
-          }
+          mydelay();
           plasma::mprintf("In block 2.\n");
         }
         result2 = 200;
